[package]
name = "altbinutils"
version = "0.1.0-alpha.1"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2018"
description = "Alternative Binary Utilities"

[dependencies]
clap = "2.33.3"
ctrlc = "3.1.7"
directories = "3.0.1"
lazy_static = "1.4.0"
log = "0.4.14"
snafu = "0.6.10"

[dev-dependencies]
rstest = "0.6.4"
serial_test = "0.5.1"
