[package]
name = "altbinutils"
version = "2021.2.1-alpha.1"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2018"
description = "Alternative Binary Utilities"

[dependencies]
clap = "2.33.3"
directories = "3.0.1"
figment = { version = "0.10.6", features = ["toml"] }
human-panic = "1.0.3"
log = "0.4.14"
semver = "0.11.0"

[dev-dependencies]
rstest = "0.9.0"
simple_logger = "1.11.0"

[workspace]
members = ["apps/rment"]
