[package]
name = "app_rment"
version = "0.1.0-alpha.1"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2018"
description = "Removes files and directories."

[[bin]]
name = "rment"
path = "src/main.rs"

[dependencies]
altbinutils = { path = ".." }
clap = { version = "2.33.3", features = ["yaml"] }
colored = "2.0.0"
indicatif = "0.15.0"
log = "0.4.14"
fern = "0.6.0"
path-dedot = "3.0.7"
quit = "1.1.2"

[dev-dependencies]
directories = "3.0.1"
rstest = "0.6.4"
serial_test = "0.5.1"
